[Update Checkout] Add master-rebranch scheme

--- a/utils/update_checkout/update-checkout-config.json
+++ b/utils/update_checkout/update-checkout-config.json
@@ -268,6 +268,30 @@
                 "sourcekit-lsp": "swift-5.2-branch",
                 "swift-format": "master"
             }
+        },
+       "master-rebranch": {
+            "aliases": ["master-rebranch", "swift/master-rebranch"],
+            "repos": {
+                "llvm-project": "swift/master-rebranch",
+                "swift": "master-rebranch",
+                "cmark": "master",
+                "llbuild": "master",
+                "swift-tools-support-core": "master",
+                "swiftpm": "master",
+                "swift-syntax": "master",
+                "swift-stress-tester": "master",
+                "swift-corelibs-xctest": "master",
+                "swift-corelibs-foundation": "master",
+                "swift-corelibs-libdispatch": "master",
+                "swift-integration-tests": "master",
+                "swift-xcode-playground-support": "master",
+                "ninja": "release",
+                "icu": "release-65-1",
+                "cmake": "v3.15.1",
+                "indexstore-db": "master",
+                "sourcekit-lsp": "master",
+                "swift-format": "master"
+            }
         }
     }
 }
