--- a/utils/update_checkout/update-checkout-config.json
+++ b/utils/update_checkout/update-checkout-config.json
@@ -8,6 +8,8 @@
             "remote": { "id": "apple/swift-cmark" } },
         "llbuild": {
             "remote": { "id": "apple/swift-llbuild" } },
+        "swift-driver": {
+            "remote": { "id": "apple/swift-driver" } },
         "swift-tools-support-core": {
             "remote": { "id": "apple/swift-tools-support-core" } },
         "swiftpm": {
@@ -54,6 +56,7 @@
                 "swift": "master",
                 "cmark": "master",
                 "llbuild": "master",
+                "swift-driver": "master",
                 "swift-tools-support-core": "master",
                 "swiftpm": "master",
                 "swift-syntax": "master",
@@ -80,6 +83,7 @@
                 "swift": "master-next",
                 "cmark": "master",
                 "llbuild": "master",
+                "swift-driver": "master",
                 "swift-tools-support-core": "master",
                 "swiftpm": "master",
                 "swift-syntax": "master",
@@ -103,6 +107,7 @@
                 "llvm-project": "swift/swift-3.0-branch",
                 "cmark": "swift-3.0-branch",
                 "llbuild": "swift-3.0-branch",
+                "swift-driver": "master",
                 "swiftpm": "swift-3.0-branch",
                 "swift-syntax": "master",
                 "swift-stress-tester": "master",
@@ -124,6 +129,7 @@
                 "swift": "swift-3.1-branch",
                 "cmark": "swift-3.1-branch",
                 "llbuild": "swift-3.1-branch",
+                "swift-driver": "master",
                 "swiftpm": "swift-3.1-branch",
                 "swift-syntax": "master",
                 "swift-stress-tester": "master",
@@ -145,6 +151,7 @@
                 "swift": "swift-4.0-branch",
                 "cmark": "swift-4.0-branch",
                 "llbuild": "swift-4.0-branch",
+                "swift-driver": "master",
                 "swiftpm": "swift-4.0-branch",
                 "swift-syntax": "master",
                 "swift-stress-tester": "master",
@@ -166,6 +173,7 @@
                 "swift": "swift-4.1-branch",
                 "cmark": "swift-4.1-branch",
                 "llbuild": "swift-4.1-branch",
+                "swift-driver": "master",
                 "swiftpm": "swift-4.1-branch",
                 "swift-syntax": "master",
                 "swift-stress-tester": "master",
@@ -187,6 +195,7 @@
                 "swift": "swift-4.2-branch",
                 "cmark": "swift-4.2-branch",
                 "llbuild": "swift-4.2-branch",
+                "swift-driver": "master",
                 "swiftpm": "swift-4.2-branch",
                 "swift-syntax": "swift-4.2-branch",
                 "swift-stress-tester": "master",
@@ -208,6 +217,7 @@
                 "swift": "swift-5.0-branch",
                 "cmark": "swift-5.0-branch",
                 "llbuild": "swift-5.0-branch",
+                "swift-driver": "master",
                 "swiftpm": "swift-5.0-branch",
                 "swift-syntax": "swift-5.0-branch",
                 "swift-stress-tester": "swift-5.0-branch",
@@ -230,6 +240,7 @@
                 "swift": "swift-5.1-branch",
                 "cmark": "swift-5.1-branch",
                 "llbuild": "swift-5.1-branch",
+                "swift-driver": "master",
                 "swiftpm": "swift-5.1-branch",
                 "swift-syntax": "swift-5.1-branch",
                 "swift-stress-tester": "swift-5.1-branch",
@@ -252,6 +263,7 @@
                 "swift": "swift-5.2-branch",
                 "cmark": "swift-5.2-branch",
                 "llbuild": "swift-5.2-branch",
+                "swift-driver": "master",
                 "swift-tools-support-core": "swift-5.2-branch",
                 "swiftpm": "swift-5.2-branch",
                 "swift-syntax": "swift-5.2-branch",
@@ -276,6 +288,7 @@
                 "swift": "master-rebranch",
                 "cmark": "master",
                 "llbuild": "master",
+                "swift-driver": "master",
                 "swift-tools-support-core": "master",
                 "swiftpm": "master",
                 "swift-syntax": "master",
