Have dtrace aggregate rr opts and start tracking {retain,release}_n.
Otherwise, one can get results that seem to imply more rr traffic when in
reality, one was not tracking {retain,release}_n that as a result of better
optimization become just simple retain, release.

--- a/benchmark/scripts/Benchmark_DTrace.in
+++ b/benchmark/scripts/Benchmark_DTrace.in
@@ -38,8 +38,7 @@ class DTraceResult(perf_test_driver.Result):
     @classmethod
     def data_headers(cls):
         return [
-            'Name', 'Result', 'strong_retain', 'strong_retain/iter',
-            'strong_release', 'strong_release/iter']
+            'Name', 'Result', 'Total RR Opts', 'Total RR Opts/Iter']
 
     @classmethod
     def data_format(cls, max_test_len):
