[Build] Add very basic swift-driver support to build-script

--- a/utils/build-presets.ini
+++ b/utils/build-presets.ini
@@ -1676,6 +1676,22 @@ assertions
 sourcekit-lsp
 
 #===------------------------------------------------------------------------===#
+# Test swift-driver
+#===------------------------------------------------------------------------===#
+
+[preset: buildbot_swift_driver_macos]
+mixin-preset=mixin_swiftpm_package_macos_platform
+release
+assertions
+swift-driver
+
+[preset: buildbot_swift_driver_linux]
+mixin-preset=mixin_swiftpm_package_linux_platform
+release
+assertions
+swift-driver
+
+#===------------------------------------------------------------------------===#
 # Test IndexStore-DB
 #===------------------------------------------------------------------------===#
 
