--- a/test/lit.cfg
+++ b/test/lit.cfg
@@ -1570,6 +1570,16 @@ if not getattr(config, 'target_run_simple_swift', None):
         '%s %%t/a.out &&'
         '%s %%t/a.out'
         % (config.target_build_swift, mcp_opt, config.target_codesign, config.target_run))
+    config.target_run_simple_swiftgyb_forward_mode_differentiation = (
+        '%%empty-directory(%%t) && '
+        '%%gyb %%s -o %%t/main.swift && '
+        '%%line-directive %%t/main.swift -- '
+        '%s %s %%t/main.swift -enable-experimental-forward-mode-differentiation -o %%t/a.out -module-name main  && '
+        '%s %%t/a.out && '
+        '%%line-directive %%t/main.swift -- '
+        '%s %%t/a.out'
+        % (config.target_build_swift, mcp_opt, config.target_codesign, config.target_run))
+    # SWIFT_ENABLE_TENSORFLOW END
 
 #
 # When changing substitutions, update docs/Testing.md.
@@ -1592,9 +1602,14 @@ config.substitutions.append(('%target-swift-frontend\(mock-sdk:([^)]+)\)',
                              SubstituteCaptures(r'%s \1 %s' % (subst_target_swift_frontend_mock_sdk,
                                                                subst_target_swift_frontend_mock_sdk_after))))
 config.substitutions.append(('%target-swift-frontend', config.target_swift_frontend))
+
 # SWIFT_ENABLE_TENSORFLOW
 # TODO: Remove when forward mode AD support is robust.
-config.substitutions.append(('%target_run_simple_swift_forward_mode_differentiation', config.target_run_simple_swift_forward_mode_differentiation))
+config.substitutions.append(('%target-run-simple-swiftgyb-forward-mode-differentiation',
+                            config.target_run_simple_swiftgyb_forward_mode_differentiation))
+config.substitutions.append(('%target-run-simple-swift-forward-mode-differentiation',
+                            config.target_run_simple_swift_forward_mode_differentiation))
+# SWIFT_ENABLE_TENSORFLOW END
 
 config.substitutions.append(('%target-run-simple-swiftgyb', config.target_run_simple_swiftgyb))
 config.substitutions.append(('%target-run-simple-swift\(([^)]+)\)', config.target_run_simple_swift_parameterized))
