build: remove SWIFT_PATH_TO_CMARK_{SOURCE,BUILD}
This replaces the custom handling for CMark with the standard CMake
handling for dependencies.  CMark now provides a `cmarkConfig` upstream
and even has proper export targets for dependency tracking.  This moves
the standalone builds to use this.

--- a/tools/SourceKit/lib/SwiftLang/CMakeLists.txt
+++ b/tools/SourceKit/lib/SwiftLang/CMakeLists.txt
@@ -63,4 +63,6 @@ target_link_libraries(SourceKitSwiftLang PRIVATE
   clangAST
   clangAPINotes
   clangBasic)
+target_compile_definitions(SourceKitSwiftLang PRIVATE
+  CMARK_STATIC_DEFINE)
 add_dependencies(SourceKitSwiftLang clang-tablegen-targets)
